--- a/course-project/public/help/index.html
+++ b/course-project/public/help/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css">
-  <link rel="stylesheet" href="/src/css/help.css">
+  <link rel="stylesheet" href="../src/css/help.css">
   <link rel="manifest" href="../manifest.json">
 </head>
 <body>
@@ -74,7 +74,7 @@
   </div>
 </div>
 
-<script defer src="/src/js/material.min.js"></script>
-<script src="/src/js/app.js"></script>
+<script defer src="../src/js/material.min.js"></script>
+<script src="../src/js/app.js"></script>
 </body>
 </html>
